[refactor] 회원관리 html,css작성 / role속성 분리 후 xml 리펙토링